kubernetes/apps/base/paperless-ngx/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless.local`)
      kind: Rule
      services:
        - name: paperless-ngx
          port: 8000
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: paperless-ngx-tls
